Lots of changes
- Added automatic mixins, no longer wasted hours due to forgetting adding a Mixin to the mixins.json.
- Added Mixin test, no longer have to launch the game to see if mixins would crash the game or not.
- Mark as incompatible with NoammAddons below 1.2.5 where DianaMobDeathEvent is not dispatched with Hide 0 Health enabled.
- Fix ChatMessageQueue: The cooldown never reset because the mixin was forgotten to be added to the mixins.json. It's now back to the original idea, where we have 200ms cd and not force cd unless a message or command has been actually sent.
- Add config toggle to the "Mute Bugged Spade Sounds" feature.
- Use RenderChest library for actually legit Glow on 26.2+. (Sadly, this library is not available for 26.1)
- Delete version specific mixins json and mixins; use preprocessor instead.
- Remove duplicate bundle and particle packet from ClientPacketListenerMixin. These did nothing already as I forgot to add this mixin to the mixins.json previously.
- Remove disabling of all "Test" tasks which was an ugly workaround about a gradle failure; properly declare dependency of preprocessTestCode on kspTestKotlin.